Prod-EU/force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Created this custom object to track Address information.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>