Prod-EU/force-app/main/default/objects/Address__c/fields/Address_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_18_Digit_Id__c</fullName>
    <description>This will convert the 15 digit Id to 18 digit</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 18 Digit Id</label>
    <type>Text</type>
</CustomField>