Prod-EU/force-app/main/default/objects/Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Straße, Hausnummer</inlineHelpText>
    <label>Address Line 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>