Prod-EU/force-app/main/default/objects/Address__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Alternativer Empfänger</inlineHelpText>
    <label>Address Line 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>