Prod-EU/force-app/main/default/objects/Address__c/fields/Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Error Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>