Prod-EU/force-app/main/default/objects/Address__c/fields/IQVIA_OneKeyId__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_OneKeyId__c</fullName>
    <description>OneKey - Records OneKey Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OneKey Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>