Prod-EU/force-app/main/default/objects/Address__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Address needs to be locked when an Order is activated so that it is not updated.</description>
    <label>Locked?</label>
    <type>Checkbox</type>
</CustomField>