Prod-EU/force-app/main/default/objects/Address__c/fields/Last_Sync_Date_With_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date_With_Oracle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Sync Date With Oracle</label>
    <type>Date</type>
</CustomField>