Prod-EU/force-app/main/default/objects/Address__c/fields/OK_PO_Box_Label__c.field-meta.xml
<CustomField>
    <fullName>OK_PO_Box_Label__c</fullName>
    <description>Populated by OneKey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Box Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>