Prod-EU/force-app/main/default/objects/Address__c/fields/OK_Rank__c.field-meta.xml
<CustomField>
    <fullName>OK_Rank__c</fullName>
    <description>OneKey - Records Address Rank</description>
    <label>Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>