Prod-EU/force-app/main/default/objects/Address__c/fields/Oracle_Cust_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Cust_Site_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Cust Site Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>