Prod-EU/force-app/main/default/objects/Address__c/fields/Oracle_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Customer_Id__c</fullName>
    <formula>Account__r.Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>