Prod-EU/force-app/main/default/objects/Address__c/fields/Oracle_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Location_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>