Prod-EU/force-app/main/default/objects/Address__c/fields/Oracle_Party_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Party_Site_Id__c</fullName>
    <description>Field will be populated via Integration from Oracle cloud</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Site Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>