Prod-EU/force-app/main/default/objects/Address__c/fields/SOS_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>SOS_Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SOS Unique ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>