Prod-EU/force-app/main/default/objects/Address__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Create - Sent</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Update - Sent</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Delete - Sent</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Merge - Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>