Prod-EU/force-app/main/default/objects/Address__c/fields/System_Of_Origin_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Of_Origin_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Of Origin ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>