Prod-EU/force-app/main/default/objects/Address__c/recordTypes/BE_Address.recordType-meta.xml
<RecordType>
    <fullName>BE_Address</fullName>
    <active>true</active>
    <description>Address for Belgium</description>
    <label>BE Address</label>
</RecordType>