Prod-EU/force-app/main/default/objects/Address__c/recordTypes/CA_Address.recordType-meta.xml
<RecordType>
    <fullName>CA_Address</fullName>
    <active>true</active>
    <description>Canadian Address</description>
    <label>CA Address</label>
</RecordType>