Prod-EU/force-app/main/default/objects/Address__c/recordTypes/DIST_Address.recordType-meta.xml
<RecordType>
    <fullName>DIST_Address</fullName>
    <active>true</active>
    <description>International Distributor Address</description>
    <label>International Distributor Address</label>
</RecordType>