Prod-EU/force-app/main/default/objects/Address__c/recordTypes/LU_Address.recordType-meta.xml
<RecordType>
    <fullName>LU_Address</fullName>
    <active>true</active>
    <description>Luxembourg Address</description>
    <label>LU Address</label>
</RecordType>