Prod-EU/force-app/main/default/objects/Address__c/recordTypes/NL_Address.recordType-meta.xml
<RecordType>
    <fullName>NL_Address</fullName>
    <active>true</active>
    <description>Netherlands Address</description>
    <label>NL Address</label>
</RecordType>