Prod-EU/force-app/main/default/objects/Address__c/recordTypes/UK_Address.recordType-meta.xml
<RecordType>
    <fullName>UK_Address</fullName>
    <active>true</active>
    <description>Address for GB and IE Countries</description>
    <label>UK Address</label>
</RecordType>