Prod-EU/force-app/main/default/objects/Address__c/validationRules/Addresses_4_CH_AT_Shd_Start_With_Alphabe.validationRule-meta.xml
<ValidationRule>
    <fullName>Addresses_4_CH_AT_Shd_Start_With_Alphabe</fullName>
    <active>true</active>
    <description>Addresses for CH and AT are incorrectly imported into Salesforce from Google Maps API. The Number should follow the street name.</description>
    <errorConditionFormula>AND(OR( TEXT(Country__c) = &quot;Switzerland&quot;, TEXT(Country__c) = &quot;Austria&quot;),
REGEX( Address_Line_1__c , &quot;\\d+?.*&quot;))</errorConditionFormula>
    <errorMessage>Address should not start with a number.</errorMessage>
</ValidationRule>