Prod-EU/force-app/main/default/objects/Address__c/validationRules/All_Address_Fields_Are_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Address_Fields_Are_Required</fullName>
    <active>true</active>
    <description>Rule to verify if all address fields are filled in when saving address record</description>
    <errorConditionFormula>OR( ISBLANK(Address_Line_1__c ) 
, ISBLANK( City__c ),ISBLANK( Postal_Code__c ),ISBLANK( TEXT(Country__c) ))</errorConditionFormula>
    <errorMessage>Address Line 1, City,  Postal Code and Country are required.</errorMessage>
</ValidationRule>