Prod-EU/force-app/main/default/objects/Address__c/validationRules/All_Address_Type_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Address_Type_Cannot_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Type__c )</errorConditionFormula>
    <errorMessage>Address Type cannot be changed.</errorMessage>
</ValidationRule>