Prod-EU/force-app/main/default/objects/Address__c/validationRules/All_Address_Type_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Address_Type_Is_Required</fullName>
    <active>true</active>
    <description>Address Type is required on Address creation</description>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorMessage>Type is required.</errorMessage>
</ValidationRule>