Prod-EU/force-app/main/default/objects/Address__c/validationRules/All_Inactive_Addresses_Cant_Be_Activated.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Inactive_Addresses_Cant_Be_Activated</fullName>
    <active>true</active>
    <description>Regular users should not be permitted make Addresses Active once they are made Inactive.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
ISCHANGED(Inactive__c),
PRIORVALUE( Inactive__c ) = TRUE
)</errorConditionFormula>
    <errorMessage>Inactive Address can not be made Active.</errorMessage>
</ValidationRule>