Prod-EU/force-app/main/default/objects/Address__c/validationRules/CA_PostalCode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_PostalCode_Validation</fullName>
    <active>true</active>
    <description>Postal Code should follow the pattern.</description>
    <errorConditionFormula>AND(NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
BEGINS(RecordType.DeveloperName, &apos;CA&apos;),
NOT(ISBLANK(  Postal_Code__c)),
NOT(REGEX(Postal_Code__c, &apos;[A-Z][0-9][A-Z] [0-9][A-Z][0-9]&apos;)))</errorConditionFormula>
    <errorDisplayField>Postal_Code__c</errorDisplayField>
    <errorMessage>Invalid Postal Code</errorMessage>
</ValidationRule>