Prod-EU/force-app/main/default/objects/Address__c/validationRules/CA_Province_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Province_Validation</fullName>
    <active>true</active>
    <description>Province is required.</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
    BEGINS(RecordType.DeveloperName, &apos;CA&apos;),
    ISBLANK(Text(State__c))
)</errorConditionFormula>
    <errorMessage>Province is a required.</errorMessage>
</ValidationRule>