Prod-EU/force-app/main/default/objects/Address__c/validationRules/DE_Address_Line_3_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Address_Line_3_Read_Only</fullName>
    <active>true</active>
    <description>To lock address line-3 when not blank.</description>
    <errorConditionFormula>AND( 
   $Profile.Name = &quot;DE Field Sales User&quot;,
   ISCHANGED(Address_Line_3__c ),
   NOT(ISBLANK(PRIORVALUE(Address_Line_3__c )))
)</errorConditionFormula>
    <errorMessage>Cannot edit Address Line-3</errorMessage>
</ValidationRule>