Prod-EU/force-app/main/default/objects/Address__c/validationRules/DE_Zip_Should_Be_5_Chars_In_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Zip_Should_Be_5_Chars_In_Length</fullName>
    <active>true</active>
    <description>Zip cannot be more or less than 5 characters in Length for Germany</description>
    <errorConditionFormula>AND(
	TEXT(Country__c) = &apos;Germany&apos;, 
	OR (LEN(Postal_Code__c) &gt; 5, LEN(Postal_Code__c) &lt; 5)  
)</errorConditionFormula>
    <errorMessage>Postal Code should be 5 chars in length.</errorMessage>
</ValidationRule>