Prod-EU/force-app/main/default/objects/Address__c/validationRules/NL_PostalCode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NL_PostalCode_Validation</fullName>
    <active>false</active>
    <description>Postal Code validation for Netherlands.</description>
    <errorConditionFormula>AND(NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
BEGINS(RecordType.DeveloperName, &apos;NL&apos;),
NOT(ISBLANK( Postal_Code__c)),
NOT(REGEX(Postal_Code__c, &apos;[0-9]{4}s?[A-Z]{2}&apos;))
/*NOT(REGEX(Postal_Code__c, &apos;(\\d{4})\\s*([A-Z]{2})&apos;)) */
)</errorConditionFormula>
    <errorMessage>Invalid Postal Code. It should be like 3072 DB</errorMessage>
</ValidationRule>